<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/urlLabel"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/urlStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/http"
        android:textSize="18sp"
        android:onClick="showPopup"/>

    <EditText
        android:id="@+id/URL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_alignBaseline="@id/urlStart"
        android:layout_toEndOf="@id/urlStart"
        android:autofillHints="uri"
        android:ems="10"
        android:hint="@string/hintURL"
        android:inputType="textUri"
        android:textSize="18sp" />

    <Button
        android:id="@+id/getSourceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/urlStart"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:onClick="getSource"
        android:text="@string/sourceBtnText"
        android:textColor="@color/black"
        app:backgroundTint="@color/yellow_500" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/border"
        android:layout_below="@+id/getSourceBtn">

        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:orientation="vertical">-->
        <TextView
            android:id="@+id/sourceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/sourceDefaultText"
            android:textSize="18sp" />

        <!--        </LinearLayout>-->
    </ScrollView>

</RelativeLayout>